# wasm_interpreter

./: Cargo.toml  Makefile  interpreter.wasm
simple/: Cargo.toml  Makefile
simple/src/: lib.rs
src/: lib.rs
