[package]
name = "simple"
version = "0.1.0"
authors = ["sugerme <hanakazu8989@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
malloc = "0.0.1"
executor = "0"
